--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,23 +1,81 @@
 *{
     padding:0;
-    margin:0;
+    margin: 0;
     box-sizing: border-box;
 }
-h1{
-    background-color: red; text-decoration-line: underline ;
+
+.header{
+    background-color: #34ebcf;
+    display: flex; 
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 15px;
+    width: 100%;  
+    }
+
+.nav{
+    display: inline-block;     
+    display:flex;
+    align-items: center;        
 }
-h2{
-    background-color: sandybrown;
+
+.header__logo{
+    width: 100px;
+    height: 100px;     
 }
-/*comentario css*/
-section{
-    background-color: pink; color:tomato;
+
+.item{padding-left: 25px;
+    color: white; 
+    text-decoration-line: none; 
+    }
+
+.h1{
+padding: 10px;
+text-align-last: center;
+font-size: 50px;
+text-decoration-line: underline;
+background-color: orange;
 }
-h1{
-    background-color: yellow;
+
+.clientes{
+    width: 300px;
+    height: 200px;
 }
-footer{background-color:orangered;
+
+.obras{
+    width: 600px;
+    height: 450px;
 }
-ul{
+
+.h2{
+    text-decoration-line: underline;
+}
+
+.footer{
+    background-color: #34ebcf;
+    color: black;    
+    padding: 30px;
+}
+
+.redes{
+    color: black;
     list-style: none;
+}
+a:link{
+    color: black;
+}
+a:visited{
+    color: grey;
+}
+a:hover{
+    color: yellow;
+}
+a:active{
+color: red;    
+}
+.formato{
+    padding: 30px;
+    text-align: justify;
+    background-color: #aaf2dc;
 }
