--- a/css/estilos.css
+++ b/css/estilos.css
@@ -11,12 +11,15 @@
     justify-content: space-evenly;
     align-items: center;
     padding: 15px;
-    width: 100%;  
+    width: 100%;
+    position: fixed;
+    
+
     }
 
 .nav{
-    display: inline-block;     
     display:flex;
+    display: inline-block;     
     align-items: center;        
 }
 
@@ -35,47 +38,241 @@ padding: 10px;
 text-align-last: center;
 font-size: 50px;
 text-decoration-line: underline;
-background-color: orange;
-}
-
-.clientes{
-    width: 300px;
-    height: 200px;
-}
-
-.obras{
-    width: 600px;
-    height: 450px;
+background-color: #6e6670;
+font-weight: 800;
 }
 
 .h2{
     text-decoration-line: underline;
+    font-size: 35px; 
+    font-weight: 400;
+    text-align: center;  
+
 }
 
 .footer{
     background-color: #34ebcf;
     color: black;    
     padding: 30px;
+    gap: 20px;
+    
 }
 
 .redes{
     color: black;
     list-style: none;
 }
+
 a:link{
     color: black;
 }
+
 a:visited{
     color: grey;
 }
+
 a:hover{
     color: yellow;
 }
+
 a:active{
 color: red;    
 }
-.formato{
+
+/*.formato{
     padding: 30px;
     text-align: justify;
     background-color: #aaf2dc;
+} main*/
+
+.flexbox{  
+    padding:50px;
+    border: 50px;  
+    margin: 50px;
+    display: flex;
+    flex-direction: row; 
+    flex-wrap: wrap; 
+    justify-content: space-between;
+       
+}
+.section1{
+    width: 100%;
+    min-height: 100vh;
+    padding-top: 130px;   
+   
+    display: flex;  
+    
+}
+.section__parrafo{text-decoration-color: olivedrab;}
+
+.section1__ladoA{
+    background-color: #caa8e3ow;
+    width: 50%;
+    
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center; 
+    padding: 32px;
+    text-align: justify;
+    gap:25px;
+             
+    }
+
+
+.section1__ladoB {
+       width: 50%;
+
+    
+    display: flex;
+    flex-direction: center;
+
+}
+
+.section1__ladoB img {
+    width: 100%;
+    height: 100%;
+  
+}
+
+.section2{
+    width: 100%;
+    min-height: 100vh;
+      
+   
+    display: flex;    
+    flex-direction: row-reverse;
+}
+
+
+.section2__ladoA{
+    background-color: #caa8e3ow;
+    width: 50%;
+    
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    /*text-align: center;*/
+    padding: 32px;
+    text-align: left;
+    gap:25px;
+         
+    }
+
+
+.section2__ladoB {
+        width: 50%;    
+    display: flex;
+    flex-direction: center;
+
+}
+
+.section2__ladoB img {
+    width: 100%;
+    /*height: 100%;*/
+}
+
+.section3{
+    width: 100%;
+    min-height: 100vh;      
+   
+    display: flex;      
+    
+}
+
+
+.section3__ladoA{
+    background-color: #caa8e3ow;
+        width: 50%;
+    
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    padding: 32px;
+    text-align: left;
+    gap:25px;
+         
+    }
+
+
+.section3__ladoB {
+    
+    width: 50%;
+
+    
+    display: flex;
+    flex-direction: center;
+
+}
+
+.section3__ladoB img {
+    width: 100%;
+    height: 100%;  
+}
+
+@media (max-width: 768px) {
+    .header{
+        flex-direction: column;
+    }
+    .h1{
+        font-size: 40px;
+    }
+
+    .header{
+        flex-wrap: wrap;
+        gap: 10px;
+    }
+    .section1, .section3{
+        flex-direction: column;
+    }
+    .section2{
+        flex-direction: column;
+        min-height: 50%;
+        
+    }
+
+    .section1__ladoA{
+        padding-top: 130px;
+        width: 100%;
+        
+    }
+    .section1__ladoB{
+       
+        width: 100%;
+        height: 100%;
+       
+    }
+
+    .section2__ladoA{
+        
+        width: 100%;         
+        flex-direction: column;
+    }
+    .section2__ladoB{
+       
+        width: 100%;       
+        flex-direction: column;
+    }
+    .section3__ladoA{
+        
+        width: 100%;        
+        flex-direction: column;
+    }
+    .section3__ladoB{
+       
+        width: 100%;
+        flex-direction: column;
+    }
+    .nav{
+        align-items: flex-start;
+        flex-wrap: wrap;
+               
+       
 }
