--- a/css/estilos.css
+++ b/css/estilos.css
@@ -5,22 +5,26 @@
 }
 
 .header{
-    background-color: #34ebcf;
+    background-color: #06278c;
     display: flex; 
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
     padding: 15px;
     width: 100%;
-    position: fixed;
-    
+    position: fixed;  
 
     }
+
+
+}
 
 .nav{
     display:flex;
     display: inline-block;     
-    align-items: center;        
+    align-items: center; 
+    color: white; 
+  
 }
 
 .header__logo{
@@ -29,8 +33,10 @@
 }
 
 .item{padding-left: 25px;
-    color: white; 
+    /*color: white;*/
     text-decoration-line: none; 
+    color: white;
+   
     }
 
 .h1{
@@ -38,8 +44,9 @@ padding: 10px;
 text-align-last: center;
 font-size: 50px;
 text-decoration-line: underline;
-background-color: #6e6670;
+/*background-color: #6e6670;*/
 font-weight: 800;
+color: white;
 }
 
 .h2{
@@ -51,10 +58,15 @@ font-weight: 800;
 }
 
 .footer{
-    background-color: #34ebcf;
-    color: black;    
-    padding: 30px;
-    gap: 20px;
+    background-color: #06278c;
+    color:white; 
+    padding-top: 130px;   
+    padding-right: 20px;
+    gap: 10px;
+    display: flex;
+    flex-direction: column;
+    /*min-height: 100vh;*/
+    
     
 }
 
@@ -63,7 +75,7 @@ font-weight: 800;
     list-style: none;
 }
 
-a:link{
+/*a:link{
     color: black;
 }
 
@@ -77,7 +89,7 @@ a:hover{
 
 a:active{
 color: red;    
-}
+}*/
 
 /*.formato{
     padding: 30px;
@@ -106,7 +118,7 @@ color: red;
 .section__parrafo{text-decoration-color: olivedrab;}
 
 .section1__ladoA{
-    background-color: #caa8e3ow;
+    background-color: #eacced;
     width: 50%;
     
 
@@ -148,7 +160,7 @@ color: red;
 
 
 .section2__ladoA{
-    background-color: #caa8e3ow;
+    background-color: #eacced;
     width: 50%;
     
 
@@ -186,7 +198,7 @@ color: red;
 
 
 .section3__ladoA{
-    background-color: #caa8e3ow;
+    background-color: #eacced;
         width: 50%;
     
 
@@ -272,7 +284,9 @@ color: red;
     }
     .nav{
         align-items: flex-start;
-        flex-wrap: wrap;
-               
+        flex-wrap: wrap;             
        
 }
+
+
+
