--- a/css/estilos.css
+++ b/css/estilos.css
@@ -12,19 +12,15 @@
     align-items: center;
     padding: 15px;
     width: 100%;
-    position: fixed;  
-
+    position: fixed; 
     }
 
-
-}
 
 .nav{
     display:flex;
     display: inline-block;     
     align-items: center; 
-    color: white; 
-  
+    color: white;   
 }
 
 .header__logo{
@@ -35,8 +31,7 @@
 .item{padding-left: 25px;
     /*color: white;*/
     text-decoration-line: none; 
-    color: white;
-   
+    color: white;   
     }
 
 .h1{
@@ -54,48 +49,48 @@ color: white;
     font-size: 35px; 
     font-weight: 400;
     text-align: center;  
-
 }
+
 
 .footer{
     background-color: #06278c;
     color:white; 
-    padding-top: 130px;   
+    padding-top: 20px;
+    padding-left: 20px;   
     padding-right: 20px;
-    gap: 10px;
+    padding-bottom: 20px;
+    gap: 20px;
     display: flex;
     flex-direction: column;
-    /*min-height: 100vh;*/
-    
-    
+    min-height: 100vh;      
+}
+
+.color{
+    color: white;
+}
+
+.contacto{
+    display: flex;
+    flex-direction: column;
+    align-content: center;    
+    color:white;
+}
+
+.main{
+    min-height: 100vh;
 }
 
 .redes{
-    color: black;
+    color: white;
     list-style: none;
 }
 
-/*a:link{
-    color: black;
-}
-
-a:visited{
-    color: grey;
-}
-
-a:hover{
-    color: yellow;
-}
-
-a:active{
-color: red;    
-}*/
 
 /*.formato{
     padding: 30px;
     text-align: justify;
     background-color: #aaf2dc;
-} main*/
+} */
 
 .flexbox{  
     padding:50px;
@@ -105,65 +100,56 @@ color: red;
     flex-direction: row; 
     flex-wrap: wrap; 
     justify-content: space-between;
-       
+    color: white;       
 }
+
 .section1{
     width: 100%;
     min-height: 100vh;
-    padding-top: 130px;   
-   
-    display: flex;  
-    
+    padding-top: 100px;   
+    display: flex; 
+    font-size: 17px; 
+      
 }
-.section__parrafo{text-decoration-color: olivedrab;}
+
+
 
 .section1__ladoA{
     background-color: #eacced;
-    width: 50%;
-    
-
+    width: 50%; 
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center; 
+    flex-direction: column;       
     padding: 32px;
     text-align: justify;
-    gap:25px;
-             
+   justify-content: center;
+    gap:25px; 
+          
     }
 
 
 .section1__ladoB {
-       width: 50%;
-
-    
+       width: 50%;    
     display: flex;
     flex-direction: center;
-
 }
 
 .section1__ladoB img {
     width: 100%;
-    height: 100%;
-  
+    height: 100%;  
 }
 
 .section2{
     width: 100%;
-    min-height: 100vh;
-      
-   
+    min-height: 100vh;     
     display: flex;    
     flex-direction: row-reverse;
+    font-size: 17px; 
 }
 
 
 .section2__ladoA{
     background-color: #eacced;
-    width: 50%;
-    
-
+    width: 50%;   
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -171,8 +157,9 @@ color: red;
     /*text-align: center;*/
     padding: 32px;
     text-align: left;
-    gap:25px;
-         
+    gap:30px;  
+    font-size: 18px; 
+           
     }
 
 
@@ -190,18 +177,15 @@ color: red;
 
 .section3{
     width: 100%;
-    min-height: 100vh;      
-   
-    display: flex;      
-    
-}
+    min-height: 100vh;    
+    display: flex; 
+    font-size: 18px;     
+    }
 
 
 .section3__ladoA{
     background-color: #eacced;
-        width: 50%;
-    
-
+        width: 50%;  
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -209,19 +193,14 @@ color: red;
     text-align: center;
     padding: 32px;
     text-align: left;
-    gap:25px;
-         
+    gap:25px;         
     }
 
 
-.section3__ladoB {
-    
-    width: 50%;
-
-    
+.section3__ladoB {    
+    width: 50%;    
     display: flex;
     flex-direction: center;
-
 }
 
 .section3__ladoB img {
@@ -231,62 +210,58 @@ color: red;
 
 @media (max-width: 768px) {
     .header{
-        flex-direction: column;
-    }
-    .h1{
-        font-size: 40px;
-    }
-
-    .header{
+        display: flex;
+        flex-direction: row;            
         flex-wrap: wrap;
         gap: 10px;
     }
+
+   
+    .h1{
+        font-size: 40px;
+    }
+    
     .section1, .section3{
         flex-direction: column;
     }
     .section2{
         flex-direction: column;
-        min-height: 50%;
-        
+        min-height: 50%;        
     }
 
     .section1__ladoA{
         padding-top: 130px;
-        width: 100%;
-        
-    }
-    .section1__ladoB{
-       
-        width: 100%;
-        height: 100%;
-       
+        width: 100%;        
     }
 
-    .section2__ladoA{
-        
+    .section1__ladoB{       
+        width: 100%;
+        height: 100%;       
+    }
+
+    .section2__ladoA{        
         width: 100%;         
         flex-direction: column;
     }
-    .section2__ladoB{
-       
+    .section2__ladoB{       
         width: 100%;       
         flex-direction: column;
     }
-    .section3__ladoA{
-        
+    .section3__ladoA{        
         width: 100%;        
         flex-direction: column;
     }
-    .section3__ladoB{
-       
+    .section3__ladoB{       
         width: 100%;
         flex-direction: column;
     }
-    .nav{
-        align-items: flex-start;
-        flex-wrap: wrap;             
+    .item{display: flex;
+        flex-direction:row;
+                    
        
 }
-
-
-
+    .footer{
+        display: flex;
+        flex-direction: column;
+       min-height: auto;   
+    }
