--- a/css/estilos.css
+++ b/css/estilos.css
@@ -26,9 +26,9 @@
 }
 
 .header__logo{
-    width: 100px;
-    height: 100px;     
-}
+    width: 80px;
+    height: 80px;    
+     }
 
 .item{padding-left: 25px;
     /*color: white;*/
@@ -44,15 +44,28 @@
     /*background-color: #6e6670;*/
     font-weight: 800;
     color: white;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .h2{
     text-decoration-line: underline;
     font-size: 35px; 
     font-weight: 400;
-    text-align: center;  
+    text-align: center;
+    padding-top: 25px;
+    padding-bottom: 25px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
+.h2formulario{
+    padding-top: 25px;
+    padding-bottom: 25px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+.video{
+    width: 100%;
+}
 .footer{
     background-color: #06278c;
     color:white; 
@@ -62,8 +75,7 @@
     padding-bottom: 20px;
     gap: 20px;
     display: flex;
-    flex-direction: column;
-    min-height: 100vh;   
+    flex-direction: column;     
     font-size: 18px;   
 }
 
@@ -212,9 +224,13 @@
     }
    
     .h1{
-        font-size: 40px;
+        font-size: 32px;
     }
     
+    .img{width: 100%;
+       
+    }
+
     .section1, .section3{
         flex-direction: column;
     }
