Cambios en footer, index

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -30,8 +30,7 @@
     height: 80px;    
      }
 
-.item{padding-left: 25px;
-    /*color: white;*/
+.item{padding-left: 25px;    
     text-decoration-line: none; 
     color: white;   
 }
@@ -64,8 +63,9 @@
 }
 
 .video{
-    width: 100%;
+    width: 100%;    
 }
+
 .footer{
     background-color: #06278c;
     color:white; 
@@ -76,7 +76,31 @@
     gap: 20px;
     display: flex;
     flex-direction: column;     
-    font-size: 18px;   
+    font-size: 15px;   
+    text-align: center;
+    align-content: space-around;
+}
+
+.social-bar{
+    position: sticky;    
+    font-size: 3rem;
+    display: flex;    
+    align-items: center;
+    justify-content: center;  
+}
+
+.icon{
+    color: blue;
+    text-decoration: none;
+    padding: .7rem;
+    display: flex;   
+}
+
+.card{
+    display: flex;  
+    justify-content: center;
+    position: sticky;
+    margin: 25px;
 }
 
 .mapa{
@@ -123,10 +147,9 @@
 
 .section1{
     width: 100%;
-    min-height: 100vh;
-    /*padding-top: 100px;*/  
+    min-height: 100vh;     
     display: flex; 
-    font-size: 17px; 
+    font-size: 17px;     
 }
 
 .section1__ladoA{
@@ -162,11 +185,10 @@
 .section2__ladoA{
     background-color: #eacced;
     width: 50%;   
-    display: flex;
+    display: flex;    
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    /*text-align: center;*/
+    justify-content: center;    
     padding: 32px;
     text-align: left;
     gap:30px;  
@@ -227,8 +249,8 @@
         font-size: 32px;
     }
     
-    .img{width: 100%;
-       
+    .img{
+        width: 100%;       
     }
 
     .section1, .section3{
@@ -241,8 +263,8 @@
     }
 
     .section1__ladoA{
-        padding-top: 130px;
-        width: 100%;        
+        padding-top: 30px;
+        width: auto;        
     }
 
     .section1__ladoB{       
@@ -269,9 +291,11 @@
     .item{display: flex;
         flex-direction:row;              
     }    
+    
+    }
     .footer{
         display: flex;
         flex-direction: column;
         min-height: auto;   
     }
-}
+
